@@ -6,15 +6,20 @@ Generate a string containing the last 15 referrers, marked up with HTML
 <a> tag.  If the string is longer than 40 characters, truncate by displaying ...
 You can access the list of referrers as the variable $referrers
 
+You can control the number of referrers displayed in config.py:
+py['num_referrers'] = n  
+
+You can control the length of the referrer string in config.py:
+py['referrer_length'] = l
+
 TODO:
-Allow number of referrers as parameters
 Compute some additional statistics
 """
 
 __author__ = "Ted Leung - twl@sauria.com"
 __version__ = "$Id$"
 
-import string, re, time, cPickle
+import os, re, string, time, cPickle
 from libs import api
 
 class PyblStats:
@@ -24,6 +29,8 @@ class PyblStats:
         self._referrersText = ""
         self._requestors = {}
         self._destinations = {}
+        self._referrer_length = int(config['referrer_length'])
+        self._num_referrers = int(config['num_referrers'])
 
     def __str__(self):
         """
@@ -34,6 +41,12 @@ class PyblStats:
         return self._referrersText
 
     def addReferer(self, uri):
+        """
+        Add a reference to a uri.
+        
+        @param uri - uri being referenced
+        @type string
+        """
         # process -
         if uri == '-':
             return
@@ -67,8 +80,8 @@ class PyblStats:
             """
             uri = tuple[0]
             count = tuple[1]
-            size = 32
-            vis = uri
+            size = self._referrer_length
+            vis = string.replace(uri,'http://','')
             if len(bad_list) > 0:
                 for pat in bad_list:
                     if re.search(pat, uri):
@@ -78,6 +91,9 @@ class PyblStats:
                     % {'uri': uri, 'vis': vis, 'count': count})
 
         def compareCounts(tuple1, tuple2):
+            """
+            Compare tuple1 and tuple2 by their second element
+            """
             count1 = tuple1[1]
             count2 = tuple2[1]
             if count1 > count2:
@@ -87,6 +103,8 @@ class PyblStats:
             return 0
 
         items = self._referrers.items()
+        # sort in alphabetical order first
+        items.sort()
         # sort list by number of occurances
         items.sort(compareCounts)
         # make a list of urls
@@ -94,29 +112,16 @@ class PyblStats:
         # remove blanks
         refs = [ x for x in refs if x != "" ]
 
-        self._referrersText = string.join(refs[0:24])
+        self._referrersText = string.join(refs[0:self._num_referrers-1])
         return self._referrersText
 
-def processRequest(args):
-    import os
-    filename = args["filename"] + '.dat'
-    returnCode = args["return_code"]
-
-    try:
-        f = file(filename)
-        stats = cPickle.load(f)
-        f.close()
-    except IOError:
-        stats = PyblStats({})
-
-    stats.addReferer(os.environ.get('HTTP_REFERER', '-'))
-    stats.addDestination(os.environ.get('REQUEST_URI', '-'))
-    stats.addVisitor(os.environ.get('REMOTE_ADDR', '-'))
-
-    f = file(filename,"w")
-    cPickle.dump(stats, f)
-
 def prepare(args):
+    """
+    Callback registered with prepareChain.  This does all the work
+    
+    @param: args dict containing the request
+    @type: dict
+    """
     request = args["request"]
     config = request.getConfiguration()
     data = request.getData()
@@ -127,13 +132,27 @@ def prepare(args):
         stats = cPickle.load(f)
         stats._request = request
         stats._config = config
+        stats._referrer_length = int(config['referrer_length'])
+        stats._num_referrers = int(config['num_referrers'])
         f.close()
 
-    except IOError:
+    except (EOFError, IOError):
         stats = PyblStats(config)
+
+    stats.addReferer(os.environ.get('HTTP_REFERER', '-'))
+    stats.addDestination(os.environ.get('REQUEST_URI', '-'))
+    stats.addVisitor(os.environ.get('REMOTE_ADDR', '-'))
 
     data["referrers"] = stats.genReferrers()
 
+    # next 2 lines null out modules vars for pickling
+    stats._request = None
+    stats._config = None
+    f = file(filename,"w")
+    cPickle.dump(stats, f)
+
 def initialize():
-    api.logRequest.register(processRequest)
+    """
+    Register the prepareChain handler
+    """
     api.prepareChain.register(prepare)
